# SocialWither

./: .gitignore  README.md  info.txt
backend/: .gitignore
backend/auth/: .env  CMakeLists.txt  compile_commands.json
backend/auth/include/controllers/: api.hpp  cors.hpp
backend/auth/src/: main.cpp
backend/auth/src/controllers/: cors.cpp  forgotPassword.cpp  getProfile.cpp  getUser.cpp  login.cpp  logout.cpp  refreshToken.cpp  register.cpp  resetPassword.cpp  token.cpp  verifyToken.cpp
backend/main/: .env  Cargo.toml
backend/main/src/: main.rs  routes.rs
backend/main/src/api/: auth.rs  images.rs  mod.rs  posts.rs  profiles.rs  query.rs  users.rs  websockets.rs
backend/posts/: docker-compose.yaml  kls_database.db  pom.xml
backend/posts/docs/: index.html
backend/posts/src/main/kotlin/com/socialwither/: Application.kt
backend/posts/src/main/kotlin/com/socialwither/database/: Mongo.kt
backend/posts/src/main/kotlin/com/socialwither/models/: Post.kt
backend/posts/src/main/kotlin/com/socialwither/plugins/: HTTP.kt  Routing.kt  Serialization.kt
backend/posts/src/main/resources/openapi/: documentation.yaml
backend/posts/src/test/kotlin/com/socialwither/: ApplicationTest.kt
backend/users/: .env  docker-compose.yaml
backend/users/src/: __init__.py
backend/users/src/migrations/: 4a8cbf37f514_user_and_profile.py
backend/users/src/models/: users.py
backend/websockets/: main.js  main.ts  package.json  pnpm-lock.yaml
frontend/: .env  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  axios.ts  posts.ts  profiles.ts
frontend/src/components/: Container.vue  Markdown.vue  Navbar.vue  Post.vue  Sidebar.vue  Toast.vue
frontend/src/routes/: CreatePost.vue  EditPost.vue  Home.vue  Login.vue  MyProfile.vue  Post.vue  Profile.vue  Register.vue  RegisterProfile.vue  index.ts
frontend/src/states/: auth.ts  profile.ts  toast.ts  users.ts
