[package]
name = "main-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures-util = { version = "0.3", default-features = false }
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
salvo = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["json", "env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }
